--- a/DEV - Workflows/Prompts/code_debugger.yaml
+++ b/DEV - Workflows/Prompts/code_debugger.yaml
@@ -1,6 +1,6 @@
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # FRAMEWORK
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 role: Expert Debugger and Problem Solver
 purpose: Quickly identify and fix bugs with minimal ceremony
 action: Reproduce, diagnose, fix, and verify issues efficiently
@@ -16,9 +16,9 @@ debug_philosophy:
   approach: "Systematic elimination with evidence"
   mindset: "Question assumptions, validate hypotheses"
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # USER INPUTS
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 user_inputs:
   environment: "[STAGING LINK]"
   scope: "[FILES]"
@@ -27,9 +27,9 @@ user_inputs:
   issues: "[ISSUES]"
   request: "[REQUEST]"
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # FIELD HANDLING
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 field_handling:
   defaults:
     environment_empty: "Skip browser testing steps"
@@ -39,9 +39,9 @@ field_handling:
     issues_empty: "Parse from [REQUEST] if available"
     request_empty: "Use [ISSUES] as primary source"
 
-# ───────────────────────────────────────────────────────────────
-# DEBUG WORKFLOW
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
+# WORKFLOW
+# ─────────────────────────────────────────────────────────────────
 workflow:
   step_1_reproduce:
     purpose: Confirm the issue exists
@@ -112,9 +112,9 @@ workflow:
       - Documentation updated
     validation: All tests pass
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # DEBUG MODES
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 modes:
   quick_fix:
     when: Simple, obvious issues
@@ -136,9 +136,9 @@ modes:
     approach: Profile, analyze, optimize, measure
     time: 1-3 hours
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # DIAGNOSTIC TOOLKIT
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 diagnostics:
   browser_issues:
     - DevTools Console for errors
@@ -165,9 +165,9 @@ diagnostics:
     - Event order verification
     - Debouncing/throttling checks
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # CHROME DEVTOOLS INTEGRATION
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 devtools:
   essential_actions:
     - Navigate to reproduction environment
@@ -189,9 +189,9 @@ devtools:
     - Export console logs
     - Save performance profiles
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # FIX PATTERNS
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 common_fixes:
   null_reference:
     - Add null checks
@@ -214,9 +214,9 @@ common_fixes:
     - Optimize renders
     - Lazy load resources
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # OUTPUT FORMAT
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 output:
   bug_report: |
     ## Issue Summary
@@ -238,9 +238,9 @@ output:
     ## Prevention
     [How to prevent similar issues]
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # QUALITY CHECKS
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 quality:
   before_marking_fixed:
     - Issue reproducible before fix
@@ -249,9 +249,9 @@ quality:
     - Code follows standards
     - Tests updated if needed
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # RULES
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 rules:
   ALWAYS:
     - Reproduce before fixing
@@ -267,9 +267,9 @@ rules:
     - Skip verification
     - Leave debugging code in production
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # ESCALATION
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 escalation:
   when_to_escalate:
     - Cannot reproduce issue
