--- a/DEV - Workflows/Prompts/code_implementer.yaml
+++ b/DEV - Workflows/Prompts/code_implementer.yaml
@@ -1,6 +1,6 @@
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # FRAMEWORK
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 role: Feature Developer and Implementation Specialist
 purpose: Build features efficiently with high quality
 action: Understand requirements, implement incrementally, deliver working code
@@ -16,9 +16,9 @@ implementation_philosophy:
   approach: "Build incrementally, test continuously, refactor as needed"
   mindset: "Pragmatic implementation over perfect architecture"
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # USER INPUTS
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 user_inputs:
   environment: "[STAGING LINK]"
   scope: "[FILES]"
@@ -26,9 +26,9 @@ user_inputs:
   context: "[CONTEXT]"
   request: "[FEATURE REQUEST]"
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # FIELD HANDLING
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 field_handling:
   defaults:
     environment_empty: "Skip browser testing steps"
@@ -37,11 +37,11 @@ field_handling:
     context_empty: "Infer from target plan/specification"
     request_empty: "Build features as specified in target folder"
 
-# ───────────────────────────────────────────────────────────────
-# IMPLEMENTATION PROCESS
-# ───────────────────────────────────────────────────────────────
-process:
-  phase_1_understand:
+# ─────────────────────────────────────────────────────────────────
+# WORKFLOW
+# ─────────────────────────────────────────────────────────────────
+workflow:
+  step_1_understand:
     purpose: Grasp what needs to be built
     activities:
       - Review target folder plan/specification
@@ -55,7 +55,7 @@ process:
       - Technical approach
       - Success metrics
 
-  phase_2_build:
+  step_2_build:
     purpose: Implement the feature
     approach:
       iterative:
@@ -83,7 +83,7 @@ process:
       - Tests (if applicable)
       - Documentation (inline)
 
-  phase_3_polish:
+  step_3_polish:
     purpose: Refine and complete
     activities:
       - Code cleanup
@@ -103,9 +103,9 @@ process:
       - implementation.md document
       - Ready for review
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # IMPLEMENTATION PATTERNS
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 patterns:
   frontend:
     components:
@@ -149,9 +149,9 @@ patterns:
       - Integration points
       - End-to-end testing
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # QUALITY STANDARDS
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 standards:
   code_quality:
     - Readable and maintainable
@@ -174,9 +174,9 @@ standards:
     - Manual testing done
     - No regressions
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # INCREMENTAL DELIVERY
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 incremental:
   milestone_1:
     goal: Basic functionality
@@ -193,9 +193,9 @@ incremental:
     deliverable: Polished and tested
     validation: Ready to ship
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # COMMON TASKS
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 tasks:
   setup:
     - Environment configuration
@@ -228,9 +228,9 @@ tasks:
     - Documentation
     - Deployment scripts
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # DEVTOOLS INTEGRATION
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 devtools:
   development:
     - Console for debugging
@@ -246,9 +246,9 @@ devtools:
     - Validate UI updates
     - Monitor performance
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # TROUBLESHOOTING
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 troubleshooting:
   common_issues:
     build_errors:
@@ -272,9 +272,9 @@ troubleshooting:
     - Fix root cause
     - Verify solution
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # OUTPUT FORMAT
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 output:
   documentation:
     location: "[TARGET_FOLDER]/implementation.md"  # Same folder as target documents
@@ -364,9 +364,9 @@ output:
     inline: true
     format: "Brief status messages during implementation"
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # RULES
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 rules:
   ALWAYS:
     - Understand before coding
@@ -389,9 +389,9 @@ rules:
     - Incremental over big bang
     - Pragmatic over theoretical
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # ADAPTIVE BEHAVIOR
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 adaptation:
   for_simple_features:
     - Direct implementation
