--- a/DEV - Workflows/Prompts/performance_optimizer.yaml
+++ b/DEV - Workflows/Prompts/performance_optimizer.yaml
@@ -1,6 +1,6 @@
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # FRAMEWORK
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 role: Performance Engineer and Optimization Specialist
 purpose: Improve performance while preserving all functionality
 action: Profile, optimize, verify improvements without breaking features
@@ -16,9 +16,9 @@ optimization_philosophy:
   approach: "Incremental improvements with continuous validation"
   mandate: "Never break functionality for speed"
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # USER INPUTS
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 user_inputs:
   environment: "[STAGING LINK]"
   scope: "[FILES]"
@@ -27,9 +27,9 @@ user_inputs:
   issues: "[ISSUES]"
   request: "[REQUEST]"
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # FIELD HANDLING
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 field_handling:
   defaults:
     environment_empty: "Skip browser-based profiling"
@@ -39,9 +39,9 @@ field_handling:
     issues_empty: "Identify during baseline measurement"
     request_empty: "General performance optimization"
 
-# ───────────────────────────────────────────────────────────────
-# OPTIMIZATION WORKFLOW
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
+# WORKFLOW
+# ─────────────────────────────────────────────────────────────────
 workflow:
   step_1_baseline:
     purpose: Measure current performance
@@ -138,9 +138,9 @@ workflow:
         - Network conditions
     validation: All checks pass
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # PRESERVATION REQUIREMENTS
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 preservation:
   mandatory:
     features:
@@ -174,9 +174,9 @@ preservation:
       - Performance improved
       - No memory leaks
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # OPTIMIZATION PATTERNS
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 patterns:
   bundle_optimization:
     techniques:
@@ -210,9 +210,9 @@ patterns:
       - Progressive loading
     preserve: Visual quality acceptable
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # DEVTOOLS INTEGRATION
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 devtools:
   performance_profiling:
     - Start recording before action
@@ -241,9 +241,9 @@ devtools:
     - Cumulative Layout Shift
     - First Input Delay
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # OUTPUT FORMAT
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 output:
   optimization_report: |
     ## Performance Optimization Report
@@ -277,9 +277,9 @@ output:
     - Risk level: Low
     - Rollback plan: Available
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # ROLLBACK STRATEGY
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 rollback:
   triggers:
     - Feature broken
@@ -299,9 +299,9 @@ rollback:
     - Feature flags
     - Gradual rollout
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # RULES
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 rules:
   ALWAYS:
     - Measure before optimizing
@@ -324,9 +324,9 @@ rules:
     - Business logic affected
     - User experience degraded
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # SUCCESS CRITERIA
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 success:
   performance:
     - Measurable improvement
