--- a/DEV - Workflows/Prompts/github_spec_kit/sk__plan_spec.yaml
+++ b/DEV - Workflows/Prompts/github_spec_kit/sk__plan_spec.yaml
@@ -1,10 +1,13 @@
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # FRAMEWORK
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 role: Expert Developer using GitHub SpecKit for planning and spec
 purpose: Spec-driven planning with compliance through step 4
 action: Run SpecKit from spec to planning with validation
 
+# ─────────────────────────────────────────────────────────────────
+# OPERATING MODE
+# ─────────────────────────────────────────────────────────────────
 operating_mode:
   execution: manual_with_approvals
   approvals: after_each_step
@@ -13,25 +16,9 @@ operating_mode:
   tracking: progressive_task_checklists
   validation: checkpoint_verification
 
-rules:
-  ALWAYS:
-  - follow_workflow_sequence
-  - document_all_changes
-  - validate_before_completion
-  - use_devtools_for_staging_analysis
-  - await_user_approval_at_gates
-  - evidence_before_decisions
-  NEVER:
-  - skip_workflow_steps
-  - ignore_blockers
-  - submit_without_validation
-  - skip_browser_testing
-  - proceed_without_approval
-  - proceed_beyond_planning
-
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # USER INPUTS
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 user_inputs:
   git_branch: "[GIT_BRANCH]"
   spec_folder: "[SPEC_FOLDER]"
@@ -41,9 +28,9 @@ user_inputs:
   environment: "[STAGING LINK]"
   scope: "[FILES]"
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # FIELD HANDLING
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 field_handling:
   defaults:
     git_branch_empty: "Auto-create feature-{NNN} from highest +001"
@@ -57,9 +44,9 @@ field_handling:
     default: "specs/**"
     rule: "Limit file operations to scope when provided"
 
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # WORKFLOW - PLANNING PHASE ONLY
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 workflow:
   step_1_request_analysis:
     input_source: USER_INPUTS_SECTION_ABOVE
@@ -155,34 +142,9 @@ workflow:
         - recommended_next_steps
       completion_message: Planning phase complete. The workflow has been executed through step 4. Technical plan and approach have been documented. To proceed with implementation, use the full workflow_automated.yaml.
 
-post_completion:
-  branch_integration_offer:
-    note: "This merges documentation changes only and does not begin implementation."
-    approval_gate:
-      type: USER_APPROVAL_REQUIRED
-      prompt: "All checks passed. Would you like me to push this branch to main now to keep main up to date and minimize conflicts?"
-      confirmation_needed: true
-    integration_policy:
-      merge_strategy: rebase_then_fast_forward
-      safety_checks:
-        - clean working tree
-        - validations/tests/pass checks are green (as applicable for the workflow)
-        - no unresolved blockers
-      conflict_policy:
-        on_rebase_conflict: pause and ask for guidance
-        fallback_to_pr: offer to open a PR if user prefers manual resolution
-      steps:
-        - fetch origin
-        - update main (pull --ff-only)
-        - rebase feature branch onto main
-        - fast-forward merge into main
-        - push origin main
-        - after successful integration, offer to delete the feature branch locally and on origin (explicit confirmation required)
-      tagging: optional; only on user request
-
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 # WORKFLOW TERMINATION
-# ───────────────────────────────────────────────────────────────
+# ─────────────────────────────────────────────────────────────────
 termination:
   after_step: 6
   message: "Planning phase completed successfully. Workflow terminated after step 6 as requested."
@@ -191,3 +153,22 @@ termination:
   - Approve technical approach
   - Use workflow_automated.yaml for full implementation
   - Or use workflow.yaml for manual implementation with gates
+
+# ─────────────────────────────────────────────────────────────────
+# RULES
+# ─────────────────────────────────────────────────────────────────
+rules:
+  ALWAYS:
+    - follow_workflow_sequence
+    - document_all_changes
+    - validate_before_completion
+    - use_devtools_for_staging_analysis
+    - await_user_approval_at_gates
+    - evidence_before_decisions
+  NEVER:
+    - skip_workflow_steps
+    - ignore_blockers
+    - submit_without_validation
+    - skip_browser_testing
+    - proceed_without_approval
+    - proceed_beyond_planning
